--- a/CarShowroom/addMark.xaml
+++ b/CarShowroom/addMark.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="CarShowroom.RedAuto"
+﻿<Window x:Class="CarShowroom.addMark"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CarShowroom"
         mc:Ignorable="d"
-        Title="Редактирование автомобилей" Height="571" Width="800"
+        Title="Редактирование марки автомобиля" Height="300" Width="500"
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize">
     <Window.Resources>
@@ -117,78 +117,46 @@
             </Setter>
         </Style>
     </Window.Resources>
+    
     <Grid >
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="212*"/>
-            <ColumnDefinition Width="375*"/>
-            <ColumnDefinition Width="10*"/>
-            <ColumnDefinition Width="198*"/>
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="13*" />
-            <RowDefinition Height="134*"/>
-            <RowDefinition Height="103*"/>
-            <RowDefinition Height="21*"/>
+            <RowDefinition Height="20*" />
+            <RowDefinition Height="75*"/>
+            <RowDefinition Height="45*"/>
+            <RowDefinition Height="40*"/>
+            <RowDefinition Height="48*"/>
+            <RowDefinition Height="43*"/>
         </Grid.RowDefinitions>
 
-        <Menu Grid.Row="0" Background="White" FontFamily="Courier New" FontSize="14" Grid.RowSpan="2" Grid.ColumnSpan="4" Margin="0,0,-0.267,0">
-            <MenuItem x:Name="menuBack" Header="Назад" Click="menuBack_Click"/>
-            <MenuItem Header="" Width="650" IsEnabled="False"/>
+        <Menu Grid.Row="0" Background="White" FontFamily="Courier New" FontSize="14" Grid.RowSpan="2">
+
+            <MenuItem Header="" Width="410" IsEnabled="False"/>
             <MenuItem Header="_Справка">
                 <MenuItem Header="_О программе" Click="About_Click" Background="White" FontFamily="Courier New" FontSize="14"/>
             </MenuItem>
         </Menu>
-        <TextBlock Grid.Row="4" Grid.Column="1" VerticalAlignment="Top" TextAlignment="Center" HorizontalAlignment="Center" Foreground="Gray" Text="Отредактируйте или удалите неправильный заказ" FontFamily="Courier New" FontSize="12" Height="42" Width="358" Margin="8.267,0,8.733,0"/>
-        <Button Grid.Row="3" Grid.Column="1" x:Name="btnSave" Style="{StaticResource btn}" Content="Сохранить" VerticalAlignment="Top" HorizontalAlignment="Right" Visibility="Hidden" Width="100" Height="30" Margin="0,0,1.733,0" Click="btnSave_Click" />
-        <Button Grid.Row="3" Grid.Column="3" x:Name="btnDelete" Style="{StaticResource btnDel}" Content="Удалить" VerticalAlignment="Top" HorizontalAlignment="Left" Visibility="Hidden" Width="100" Height="30" Margin="0.267,0,0,0" Click="btnDelete_Click" />
+
+        <Image x:Name="imgCar" Grid.Row="2" HorizontalAlignment="Right" Height="72" VerticalAlignment="Top" Width="143"/>
 
 
-        <Grid Grid.Row="2" VerticalAlignment="Top" Height="418" Margin="0,1,-0.267,0" Grid.ColumnSpan="4" Grid.RowSpan="2">
-            <!--Visibility="Visible"-->
-            <TextBlock Style="{StaticResource txtBlock}" Margin="597,39,130.267,352" Text="Цена:"/>
-            <TextBlock Style="{StaticResource txtBlock}" Margin="358,39,350,352" Text="Марка:"/>
-            <TextBlock Style="{StaticResource txtBlock}" FontSize="20" Margin="3,381,648.267,10" Text="Фотография:"/>
-            <TextBox x:Name="txtPrice" Style="{StaticResource txtBox}" PreviewTextInput="inphone" MaxLines="1" MaxLength="10" Margin="665,39,19,352" Text="" IsEnabled="True"/>
+        <ComboBox Name="CSzak" Grid.Row="2" Visibility="Hidden" VerticalAlignment="Top" Style="{StaticResource cmbBox}" SelectionChanged="CSzak_SelectionChanged" Margin="0,29,407,0"/>
+        <TextBlock Name="TIDzak" Grid.Row="2" Visibility="Hidden" VerticalAlignment="Top" Style="{StaticResource txtBlock}" Text="Код марки" Height="29"/>
 
-            <TextBlock Style="{StaticResource txtBlock}" Margin="358,155,321,236" Text="Описание:"/>
-            <TextBox Name="txtInfo" Style="{StaticResource txtBox}" FontSize="16" TextWrapping="Wrap" Margin="473,155,19,173" Text=""/>
-            <TextBox x:Name="txtImg" Style="{StaticResource txtBox}" FontSize="16" Margin="147,381,377.267,10" Text="" IsEnabled="False"/>
-            <ComboBox Name="combMark" Style="{StaticResource cmbBox}" FontSize="16" HorizontalAlignment="Left" Margin="445,39,0,0" VerticalAlignment="Top" Width="147" Height="30" SelectionChanged="combMark_SelectionChanged"/>
+        <Button x:Name="btnSave" Content="Сохранить" Grid.Row="5" Style="{StaticResource btn}" Visibility="Hidden" HorizontalAlignment="Center" VerticalAlignment="Top" Width="118" Height="26" Click="btnSave_Click" Margin="125,0,251,0"/>
+        <Button x:Name="btnDel"  Content="Удалить" Grid.Row="5" Style="{StaticResource btnDel}" Visibility="Hidden" HorizontalAlignment="Center" VerticalAlignment="Top" Width="118" Height="26" Click="btnDel_Click" Margin="251,0,125,0"/>
+        <Button x:Name="btnNowAdd" Content="Вернуться" Grid.Row="6" Style="{StaticResource btn}" Visibility="Hidden" HorizontalAlignment="Center" VerticalAlignment="Top" Width="128" Height="29" Margin="183,0" Click="btnNowAdd_Click"/>
 
-            <Grid VerticalAlignment="Top" Height="419" Margin="0,0,0.267,-1">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="71*"/>
-                    <RowDefinition Height="310*"/>
-                    <RowDefinition Height="38*"/>
-                    <RowDefinition Height="0*"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="148*"/>
-                    <ColumnDefinition Width="117*"/>
-                </Grid.ColumnDefinitions>
-                <Button x:Name="btnAddMark" Style="{StaticResource btn}" Content="Добавить марку" HorizontalAlignment="Left" VerticalAlignment="Top" Visibility="Visible" Width="150" Height="20" Grid.Row="1" Grid.Column="1" Click="btnAddMark_Click"/>
-                <Button x:Name="btnAdd" Style="{StaticResource btn}" Content="Добавить автомобиль" HorizontalAlignment="Center" VerticalAlignment="Top" Visibility="Visible" Width="200" Height="30" Grid.Row="2" Grid.Column="1" Click="btnAdd_Click"/>
-                <Button x:Name="btnRed" Style="{StaticResource btn}" Visibility="Visible" Content="Редактировать автомобиль" VerticalAlignment="Top" Height="30" Grid.Column="1" Grid.Row="3" Width="250" Margin="0,0,0,-30" Click="btnRed_Click"/>
-                <Button x:Name="btnBackAdd" Style="{StaticResource btn}" Visibility="Hidden" Content="Вернуться к добавлению" VerticalAlignment="Top" Height="30" Grid.Column="1" Grid.Row="3" Width="250" Margin="0,0,0,-30" Click="btnBackAdd_Click"/>
-
-                <Button x:Name="btnRedImg" Style="{StaticResource btn}" Visibility="Visible" Content="Изменить фото" VerticalAlignment="Top" Height="20" Grid.Column="0" Grid.Row="3" Width="150" Margin="0,0,0,-20" Click="btnRedImg_Click"/>
-
-            </Grid>
+        <Button x:Name="btnAdd" Grid.Row="5" Style="{StaticResource btn}" Content="Добавить" Visibility="Visible" HorizontalAlignment="Center" VerticalAlignment="Top" Width="118" Height="26" Click="btnAdd_Click" />
+        <Button x:Name="btnRedImg" Grid.Row="4" Style="{StaticResource btn}" Content="Выбрать" Visibility="Visible" HorizontalAlignment="Right" VerticalAlignment="Top" Width="90" Height="16" Click="btnRedImg_Click"/>
 
 
+        <Button x:Name="btnEdit" Grid.Row="6" Style="{StaticResource btn}" Visibility="Visible" Content="Редактировать" HorizontalAlignment="Center" VerticalAlignment="Top" Width="128" Height="29" Click="btnEdit_Click" />
+        <TextBlock Grid.Row="4" Style="{StaticResource txtBlock}" HorizontalAlignment="Center" Text="Название марки" VerticalAlignment="Top" Height="23" Width="168" />
+        <TextBlock Grid.Row="3" Style="{StaticResource txtBlock}" HorizontalAlignment="Right" Text="Фото" VerticalAlignment="Bottom" Height="23" TextAlignment="Center" Width="90"/>
 
-
-
-            <ComboBox x:Name="combID" Style="{StaticResource cmbBox}" Visibility="Hidden" HorizontalAlignment="Left" Margin="10,49,0,0" VerticalAlignment="Top" Width="85" Height="30" SelectionChanged="combID_SelectionChanged"/>
-            <TextBlock x:Name="txtID" Style="{StaticResource txtBlock}" Visibility="Hidden" Margin="10,11,602,372" Text="Код автомобиля"/>
-            <TextBlock Style="{StaticResource txtBlock}" Margin="358,103,350,288" Text="Модель:"/>
-            <ComboBox x:Name="combModel" Style="{StaticResource cmbBox}" FontSize="16" HorizontalAlignment="Left" Margin="445,103,0,0" VerticalAlignment="Top" Width="330" Height="30" SelectionChanged="combModel_SelectionChanged"/>
-            <TextBox x:Name="txtModel" Style="{StaticResource txtBox}" HorizontalAlignment="Left" Visibility="Visible" Margin="445,103,0,0" VerticalAlignment="Top" Width="330" Height="30" Text=""/>
-
-            <Image x:Name="imgCar" HorizontalAlignment="Left" Height="270" Margin="10,92,0,0" VerticalAlignment="Top" Width="334"/>
-
-        </Grid>
+        <TextBox x:Name="txtName" Grid.Row="3" Style="{StaticResource txtBox}" HorizontalAlignment="Center" Text="" VerticalAlignment="Bottom" Width="252" Height="24" TextAlignment="Center"/>
+        <TextBox x:Name="txtImg" Grid.Row="3" Style="{StaticResource txtBox}" HorizontalAlignment="Right" Text="" FontSize="12" VerticalAlignment="Top" Width="90" Height="24" IsEnabled="False"/>
 
     </Grid>
 </Window>
