--- a/CarShowroom/addNewRaspisanie.xaml
+++ b/CarShowroom/addNewRaspisanie.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="CarShowroom.Zakaz"
+﻿<Window x:Class="CarShowroom.addNewRaspisanie"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CarShowroom"
         mc:Ignorable="d"
-        Title="Оформление заказа" Height="571" Width="800"
+        Title="Добавление расписания" Height="390" Width="500"
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize">
     <Window.Resources>
@@ -117,57 +117,40 @@
             </Setter>
         </Style>
     </Window.Resources>
+
     <Grid >
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="212*"/>
-            <ColumnDefinition Width="375*"/>
-            <ColumnDefinition Width="57*"/>
-            <ColumnDefinition Width="151*"/>
+            <ColumnDefinition Width="9*"/>
+            <ColumnDefinition Width="70*"/>
+            <ColumnDefinition Width="90*"/>
+            <ColumnDefinition Width="78*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="26*" />
-            <RowDefinition Height="425*"/>
-            <RowDefinition Height="49*"/>
-            <RowDefinition Height="42*"/>
+            <RowDefinition Height="19*" />
+            <RowDefinition Height="172*"/>
+
+            <RowDefinition Height="25*"/>
+            <RowDefinition Height="55*"/>
+            <RowDefinition Height="90*"/>
         </Grid.RowDefinitions>
 
-        <Menu Grid.Row="0" Background="White" FontFamily="Courier New" FontSize="14" Grid.RowSpan="2" Grid.ColumnSpan="4" Margin="0,0,-0.267,0">
-            <MenuItem x:Name="menuBack" Header="Назад" Click="menuBack_Click"/>
-            <MenuItem Header="" Width="650" IsEnabled="False"/>
+        <Menu Grid.Row="0" Background="White" FontFamily="Courier New" FontSize="14" Grid.RowSpan="2" Grid.ColumnSpan="4">
+
+            <MenuItem Header="" Width="410" IsEnabled="False"/>
             <MenuItem Header="_Справка">
                 <MenuItem Header="_О программе" Click="About_Click" Background="White" FontFamily="Courier New" FontSize="14"/>
             </MenuItem>
         </Menu>
-        <TextBlock Grid.Row="4" Grid.Column="1" VerticalAlignment="Top" TextAlignment="Center" HorizontalAlignment="Center" Foreground="Gray" Text="Отредактируйте или удалите неправильный заказ" FontFamily="Courier New" FontSize="12" Height="42" Width="358"/>
-        <Button Grid.Row="3" Grid.Column="1" x:Name="btnSave" Style="{StaticResource btn}" Content="Сохранить" VerticalAlignment="Top" HorizontalAlignment="Right" Visibility="Visible" Width="100" Height="30" Click="btnSave_Click"/>
+        <Calendar x:Name="dateDay" Grid.Row="2" Grid.Column="2" SelectedDatesChanged="dateDay_SelectedDatesChanged"/>
+        <Button x:Name="btnAdd" Grid.Row="5" Style="{StaticResource btn}" Content="Добавить" Visibility="Visible" HorizontalAlignment="Center" VerticalAlignment="Top" Width="118" Height="26" Click="btnAdd_Click" Grid.Column="2" />
+        <ComboBox x:Name="combSotName" Grid.Row="3" Grid.Column="2" Style="{StaticResource cmbBox}" HorizontalAlignment="Center" VerticalAlignment="Bottom" Height="23" Width="150"/>
+        <TextBlock Grid.Row="4" Grid.Column="2" Style="{StaticResource txtBlock}" HorizontalAlignment="Center" Text="Сотрудник" VerticalAlignment="Top" Height="23" Width="150"/>
 
-
-        <Grid Grid.Row="2" VerticalAlignment="Top" Height="418" Margin="0,1,-0.267,0" Grid.ColumnSpan="4">
-            <!--Visibility="Visible"-->
-            <TextBlock Style="{StaticResource txtBlock}" Margin="586,212,138,179" Text="Цена:"/>
-            <TextBlock Style="{StaticResource txtBlock}" Margin="373,212,341,179" Text="Марка:"/>
-            <TextBlock Style="{StaticResource txtBlock}" Margin="504,93,187,298" Text="Телефон:"/>
-            <TextBlock Style="{StaticResource txtBlock}" Margin="349,318,330,73" Text="Описание:"/>
-            <TextBlock Style="{StaticResource txtBlock}" Margin="207,93,462,298" Text="Отчество:"/>
-            <TextBlock Style="{StaticResource txtBlock}" Margin="220,49,473,342" Text="Фамилия:"/>
-            <TextBlock Style="{StaticResource txtBlock}" Margin="504,49,235,342" Text="Имя:"/>
-
-            <TextBox Name="FIO" Style="{StaticResource txtBox}" PreviewTextInput="inpatr" MaxLines="1" MaxLength="45" Margin="332,93,303,298" Text=""/>
-            <TextBox Name="phone" Style="{StaticResource txtBox}" FontSize="16" PreviewTextInput="inphone" MaxLines="1" MaxLength="11" Margin="607,93,60,298" Text=""/>
-            <TextBox Name="txtInfo" Style="{StaticResource txtBox}" FontSize="16" TextWrapping="Wrap" Margin="464,318,28,10" Text=""/>
-            <TextBox x:Name="Sur" Style="{StaticResource txtBox}" PreviewTextInput="insur" MaxLines="1" MaxLength="45" Margin="321,49,303,342" Text="" Width="170"/>
-            <TextBox x:Name="Name" Style="{StaticResource txtBox}" PreviewTextInput="inname" MaxLines="1" MaxLength="45" Margin="564,49,60,342" Text="" Width="170"/>
-            <TextBox x:Name="txtPrice" Style="{StaticResource txtBox}" MaxLines="1" MaxLength="10" Margin="656,212,28,179" Text="" IsEnabled="False"/>
-            <ComboBox Name="combMark" Style="{StaticResource cmbBox}" FontSize="16" HorizontalAlignment="Left" Margin="453,212,0,0" VerticalAlignment="Top" Width="120" Height="30" SelectionChanged="combMark_SelectionChanged"/>
-            <TextBlock x:Name="txtID_Copy" Style="{StaticResource txtBlock}" Visibility="Visible" Margin="398,10,214,373" Text="Данные клиента"/>
-            <TextBlock x:Name="txtID_Copy1" Style="{StaticResource txtBlock}" Visibility="Visible" Margin="398,148,214,235" Text="Данные товара"/>
-            <TextBlock Style="{StaticResource txtBlock}" Margin="373,266,330,125" Text="Модель:"/>
-            <ComboBox x:Name="combModel" Style="{StaticResource cmbBox}" FontSize="16" HorizontalAlignment="Left" Margin="464,266,0,0" VerticalAlignment="Top" Width="302" Height="30" SelectionChanged="combModel_SelectionChanged"/>
-
-            <Image x:Name="imgCar" HorizontalAlignment="Left" Height="260" Margin="10,148,0,0" VerticalAlignment="Top" Width="334"/>
-
-        </Grid>
+        <TextBlock Grid.Row="4" Grid.Column="1" Style="{StaticResource txtBlock}" HorizontalAlignment="Center" Text="Дата" VerticalAlignment="Top" Height="23" Width="130"/>
+        <TextBox x:Name="txtDate" Grid.Column="1" Grid.Row="3" Style="{StaticResource txtBox}" IsEnabled="False" HorizontalAlignment="Center" Text="" VerticalAlignment="Bottom" Width="130" Height="24" TextAlignment="Center"/>
+        <TextBlock Grid.Row="4" Grid.Column="3" Style="{StaticResource txtBlock}" HorizontalAlignment="Center" Text="Тип" VerticalAlignment="Top" Height="23" Width="130"/>
+        <TextBox x:Name="txtType" Grid.Column="3" Grid.Row="3" Style="{StaticResource txtBox}" HorizontalAlignment="Center" Text="" VerticalAlignment="Bottom" Width="130" Height="24" TextAlignment="Center"/>
 
     </Grid>
 </Window>
